[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-scape"
version = "0.0.1"
description = "Gymnasium wrapper for a headless 2006Scape client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.23",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
packages = ["rl_scape"]
